WATT AUTO верстка

--- a/brand-page.html
+++ b/brand-page.html
@@ -335,7 +335,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -375,7 +375,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -415,7 +415,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -455,7 +455,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -495,7 +495,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -535,7 +535,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -575,7 +575,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -615,7 +615,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -655,7 +655,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -689,7 +689,6 @@
                         </div>
                     </div>
                 </div>
-
 
                 <div class="more-btn">
                     <a href="#" class="btn btn-white-bordered">Показать ещё</a>
@@ -702,7 +701,15 @@
                     <li class="pagination-item"><a href="#" class="pagination-item__link">4</a></li>
                 </ul>
 
+                <p>Текстовый блок. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу.</p>
 
+                <p>Текстовый блок. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу.</p>
+
+                <p>Текстовый блок. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу.</p>
+
+                <p>Текстовый блок. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу.</p>
+
+                <p>Текстовый блок. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу.</p>
             </div>
         </section>
     </main>
