--- a/buy.html
+++ b/buy.html
@@ -312,24 +312,71 @@
             <section class="section-content">
                 <div class="container">
                     <div class="buy-nav">
-                        <a href="#" class="buy-nav-item buy-nav-item--selected">Лучшая цена</a>
-                        <a href="#" class="buy-nav-item">Покупка в кредит</a>
-                        <a href="#" class="buy-nav-item">Страхование</a>
-                        <a href="#" class="buy-nav-item">Лизинг для юр. лиц</a>
+                        <a href="#" class="buy-nav-item is-selected js-tab-btn" data-tab-id="1" data-tab-group="1">Лучшая цена</a>
+                        <a href="#" class="buy-nav-item js-tab-btn" data-tab-id="2" data-tab-group="1">Покупка в кредит</a>
+                        <a href="#" class="buy-nav-item js-tab-btn" data-tab-id="3" data-tab-group="1">Страхование</a>
+                        <a href="#" class="buy-nav-item js-tab-btn" data-tab-id="4" data-tab-group="1">Лизинг для юр. лиц</a>
                     </div>
 
-                    <p><strong>Покупка автомобиля проходит в несколько этапов:</strong></p>
-                    <ul>
-                        <li>Индивидуальная консультация с персональным менеджером</li>
-                        <li>Тест-драйв и просмотр автомобиля при его наличии в салоне в Москве</li>
-                        <li>Заключение договора: включает в себя сервисное обслуживание, дополнительные услуги - по Вашему желанию</li>
-                        <li>После выбора автомобиля клиенту отправляется видео продукта и VIN номер</li>
-                        <li>Транспортировка автомобиля: (средние сроки 1,5-2 месяца), сбор полного пакета документов под ключ, постановка учет и выдача полного пакета документов</li>
-                        <li>Подготовка автомобиля перед передачей клиенту: детейлинг мойка и чистка салона, и другие приятные опции за наш счёт от наших партнёров</li>
-                        <li>Премиальное тюнинг и детейлинг обслуживание приобретённых автомобилей от наших партнёров А1 BRABUS RUSSIA</li>
-                    </ul>
-                    <p><strong>Оплата происходит по контракту, условия которого индивидуально согласуются с персональным менеджером.
-                        Указанные на сайте цены не являются публичной офертой и могут варьироваться в зависимости от курса валют и логистических условий.</strong></p>
+                    <div class="tab-content js-tab-content is-selected" data-tab-id="1" data-tab-group="1">
+                        <p><strong>Покупка автомобиля проходит в несколько этапов:</strong></p>
+                        <ul>
+                            <li>Индивидуальная консультация с персональным менеджером</li>
+                            <li>Тест-драйв и просмотр автомобиля при его наличии в салоне в Москве</li>
+                            <li>Заключение договора: включает в себя сервисное обслуживание, дополнительные услуги - по Вашему желанию</li>
+                            <li>После выбора автомобиля клиенту отправляется видео продукта и VIN номер</li>
+                            <li>Транспортировка автомобиля: (средние сроки 1,5-2 месяца), сбор полного пакета документов под ключ, постановка учет и выдача полного пакета документов</li>
+                            <li>Подготовка автомобиля перед передачей клиенту: детейлинг мойка и чистка салона, и другие приятные опции за наш счёт от наших партнёров</li>
+                            <li>Премиальное тюнинг и детейлинг обслуживание приобретённых автомобилей от наших партнёров А1 BRABUS RUSSIA</li>
+                        </ul>
+                        <p><strong>Оплата происходит по контракту, условия которого индивидуально согласуются с персональным менеджером.
+                            Указанные на сайте цены не являются публичной офертой и могут варьироваться в зависимости от курса валют и логистических условий.</strong></p>
+                    </div>
+
+                    <div class="tab-content js-tab-content" data-tab-id="2" data-tab-group="1">
+                        <p><strong>22 Покупка автомобиля проходит в несколько этапов:</strong></p>
+                        <ul>
+                            <li>Индивидуальная консультация с персональным менеджером</li>
+                            <li>Тест-драйв и просмотр автомобиля при его наличии в салоне в Москве</li>
+                            <li>Заключение договора: включает в себя сервисное обслуживание, дополнительные услуги - по Вашему желанию</li>
+                            <li>После выбора автомобиля клиенту отправляется видео продукта и VIN номер</li>
+                            <li>Транспортировка автомобиля: (средние сроки 1,5-2 месяца), сбор полного пакета документов под ключ, постановка учет и выдача полного пакета документов</li>
+                            <li>Подготовка автомобиля перед передачей клиенту: детейлинг мойка и чистка салона, и другие приятные опции за наш счёт от наших партнёров</li>
+                            <li>Премиальное тюнинг и детейлинг обслуживание приобретённых автомобилей от наших партнёров А1 BRABUS RUSSIA</li>
+                        </ul>
+                        <p><strong>Оплата происходит по контракту, условия которого индивидуально согласуются с персональным менеджером.
+                            Указанные на сайте цены не являются публичной офертой и могут варьироваться в зависимости от курса валют и логистических условий.</strong></p>
+                    </div>
+
+                    <div class="tab-content js-tab-content" data-tab-id="3" data-tab-group="1">
+                        <p><strong>33 Покупка автомобиля проходит в несколько этапов:</strong></p>
+                        <ul>
+                            <li>Индивидуальная консультация с персональным менеджером</li>
+                            <li>Тест-драйв и просмотр автомобиля при его наличии в салоне в Москве</li>
+                            <li>Заключение договора: включает в себя сервисное обслуживание, дополнительные услуги - по Вашему желанию</li>
+                            <li>После выбора автомобиля клиенту отправляется видео продукта и VIN номер</li>
+                            <li>Транспортировка автомобиля: (средние сроки 1,5-2 месяца), сбор полного пакета документов под ключ, постановка учет и выдача полного пакета документов</li>
+                            <li>Подготовка автомобиля перед передачей клиенту: детейлинг мойка и чистка салона, и другие приятные опции за наш счёт от наших партнёров</li>
+                            <li>Премиальное тюнинг и детейлинг обслуживание приобретённых автомобилей от наших партнёров А1 BRABUS RUSSIA</li>
+                        </ul>
+                        <p><strong>Оплата происходит по контракту, условия которого индивидуально согласуются с персональным менеджером.
+                            Указанные на сайте цены не являются публичной офертой и могут варьироваться в зависимости от курса валют и логистических условий.</strong></p>
+                    </div>
+
+                    <div class="tab-content js-tab-content" data-tab-id="4" data-tab-group="1">
+                        <p><strong>44 Покупка автомобиля проходит в несколько этапов:</strong></p>
+                        <ul>
+                            <li>Индивидуальная консультация с персональным менеджером</li>
+                            <li>Тест-драйв и просмотр автомобиля при его наличии в салоне в Москве</li>
+                            <li>Заключение договора: включает в себя сервисное обслуживание, дополнительные услуги - по Вашему желанию</li>
+                            <li>После выбора автомобиля клиенту отправляется видео продукта и VIN номер</li>
+                            <li>Транспортировка автомобиля: (средние сроки 1,5-2 месяца), сбор полного пакета документов под ключ, постановка учет и выдача полного пакета документов</li>
+                            <li>Подготовка автомобиля перед передачей клиенту: детейлинг мойка и чистка салона, и другие приятные опции за наш счёт от наших партнёров</li>
+                            <li>Премиальное тюнинг и детейлинг обслуживание приобретённых автомобилей от наших партнёров А1 BRABUS RUSSIA</li>
+                        </ul>
+                        <p><strong>Оплата происходит по контракту, условия которого индивидуально согласуются с персональным менеджером.
+                            Указанные на сайте цены не являются публичной офертой и могут варьироваться в зависимости от курса валют и логистических условий.</strong></p>
+                    </div>
                 </div>
             </section>
         </main>
