--- a/car-page.html
+++ b/car-page.html
@@ -307,7 +307,7 @@
         </section>
 
         <section class="section-page-header">
-            <img src="img/headers/catalog-dop-page.jpeg" alt="">
+            <img src="img/headers/car-page.jpeg" alt="">
         </section>
 
         <section class="section-content">
@@ -420,78 +420,37 @@
                         <div class="car-body-color__list">
                             <div class="car-body-color__name js-car-body-color-name">Серый металик</div>
                             <div class="car-body-color__tabs-nav">
-                                <a href="#" class="car-body-color__tabs-nav-item js-tab-btn is-selected" style="background-color: #D9D9D9" data-color-name="Серый металик" data-tab-id="1" data-tab-group="1"></a>
-                                <a href="#" class="car-body-color__tabs-nav-item js-tab-btn" style="background-color: #000" data-color-name="Черный" data-tab-id="2" data-tab-group="1"></a>
-                                <a href="#" class="car-body-color__tabs-nav-item js-tab-btn" style="background-color: #D8C5AA" data-color-name="Бежевый" data-tab-id="3" data-tab-group="1"></a>
-                                <a href="#" class="car-body-color__tabs-nav-item js-tab-btn" style="background-color: #365368" data-color-name="Голубой" data-tab-id="4" data-tab-group="1"></a>
-                                <a href="#" class="car-body-color__tabs-nav-item js-tab-btn" style="background-color: #FFF" data-color-name="Белый" data-tab-id="5" data-tab-group="1"></a>
+
+                                <div class="swiper js-body-color-list">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide car-body-color__tabs-nav-item" style="background-color: #D9D9D9">Slide 1</div>
+                                        <div class="swiper-slide car-body-color__tabs-nav-item" style="background-color: #000">Slide 2</div>
+                                        <div class="swiper-slide car-body-color__tabs-nav-item" style="background-color: #D8C5AA">Slide 3</div>
+                                        <div class="swiper-slide car-body-color__tabs-nav-item" style="background-color: #365368">Slide 4</div>
+                                        <div class="swiper-slide car-body-color__tabs-nav-item" style="background-color: #FFF">Slide 5</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="car-body-color__text">
+                        <div class="car-body-color__text desktop-only">
                             <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</p>
                         </div>
                     </div>
                     <div class="car-body-color__gallery">
-                        <div class="tab-content js-tab-content is-selected" data-tab-id="1" data-tab-group="1">
-                            <div class="swiper js-car-color-body-gallery" data-gallery="1">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-2.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
-                                </div>
+                        <div class="swiper js-car-color-body-gallery" data-gallery="1">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/product/product-img-2.jpeg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
                             </div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-prev" data-gallery="1"></div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-next" data-gallery="1"></div>
+                            <div class="js-car-color-body-gallery swiper-button-prev"></div>
+                            <div class="js-car-color-body-gallery swiper-button-next"></div>
                         </div>
-                        <div class="tab-content js-tab-content" data-tab-id="2" data-tab-group="1">
-                            <div class="swiper js-car-color-body-gallery" data-gallery="2">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-2.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                </div>
-                            </div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-prev" data-gallery="2"></div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-next" data-gallery="2"></div>
-                        </div>
-                        <div class="tab-content js-tab-content" data-tab-id="3" data-tab-group="1">
-                            <div class="swiper js-car-color-body-gallery" data-gallery="3">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-2.jpeg" alt=""></div>
-                                </div>
-                            </div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-prev" data-gallery="3"></div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-next" data-gallery="3"></div>
-                        </div>
-                        <div class="tab-content js-tab-content" data-tab-id="4" data-tab-group="1">
-                            <div class="swiper js-car-color-body-gallery" data-gallery="4">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="img/product/product-img-2.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                </div>
-                            </div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-prev" data-gallery="4"></div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-next" data-gallery="4"></div>
-                        </div>
-                        <div class="tab-content js-tab-content" data-tab-id="5" data-tab-group="1">
-                            <div class="swiper js-car-color-body-gallery" data-gallery="5">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="img/product/product-img-1.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-2.jpeg" alt=""></div>
-                                    <div class="swiper-slide"><img src="img/product/product-img-3.jpeg" alt=""></div>
-                                </div>
-                            </div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-prev" data-gallery="5"></div>
-                            <div class="js-car-color-body-gallery-nav swiper-button-next" data-gallery="5"></div>
-                        </div>
+                    </div>
+                    <div class="car-body-color__text mobile-only">
+                        <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</p>
                     </div>
                 </div>
 
@@ -558,6 +517,31 @@
                             <div class="js-car-color-interior-gallery-nav swiper-button-prev" data-gallery="10"></div>
                             <div class="js-car-color-interior-gallery-nav swiper-button-next" data-gallery="10"></div>
                         </div>
+                        <div class="interior-colors-choice__nav mobile-only">
+                            <div class="tab-content js-tab-content is-selected" data-tab-id="1" data-tab-group="2">
+                                <div class="js-car-color-interior-gallery-nav swiper-button-prev" data-gallery="6"></div>
+                                <div class="js-car-color-interior-gallery-nav swiper-button-next" data-gallery="6"></div>
+                            </div>
+                            <div class="tab-content js-tab-content" data-tab-id="2" data-tab-group="2">
+                                <div class="js-car-color-interior-gallery-nav swiper-button-prev" data-gallery="7"></div>
+                                <div class="js-car-color-interior-gallery-nav swiper-button-next" data-gallery="7"></div>
+                            </div>
+                            <div class="tab-content js-tab-content" data-tab-id="3" data-tab-group="2">
+                                <div class="js-car-color-interior-gallery-nav swiper-button-prev" data-gallery="8"></div>
+                                <div class="js-car-color-interior-gallery-nav swiper-button-next" data-gallery="8"></div>
+                            </div>
+                            <div class="tab-content js-tab-content" data-tab-id="4" data-tab-group="2">
+                                <div class="js-car-color-interior-gallery-nav swiper-button-prev" data-gallery="9"></div>
+                                <div class="js-car-color-interior-gallery-nav swiper-button-next" data-gallery="9"></div>
+                            </div>
+                            <div class="tab-content js-tab-content" data-tab-id="5" data-tab-group="2">
+                                <div class="js-car-color-interior-gallery-nav swiper-button-prev" data-gallery="10"></div>
+                                <div class="js-car-color-interior-gallery-nav swiper-button-next" data-gallery="10"></div>
+                            </div>
+                        </div>
+                        <div class="interior-colors-choice__right mobile-only">
+                            Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.
+                        </div>
                     </div>
                     <div class="interior-colors-choice">
                         <div class="interior-colors-choice__left">
@@ -571,10 +555,10 @@
                                 <a href="#" class="interior-colors-choice__tabs-nav-item js-tab-btn" style="background-color: #FFF" data-color-name="Белый" data-tab-id="5" data-tab-group="2"></a>
                             </div>
                         </div>
-                        <div class="interior-colors-choice__right">
+                        <div class="interior-colors-choice__right desktop-only">
                             Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.
                         </div>
-                        <div class="interior-colors-choice__nav">
+                        <div class="interior-colors-choice__nav desktop-only">
                             <div class="tab-content js-tab-content is-selected" data-tab-id="1" data-tab-group="2">
                                 <div class="js-car-color-interior-gallery-nav swiper-button-prev" data-gallery="6"></div>
                                 <div class="js-car-color-interior-gallery-nav swiper-button-next" data-gallery="6"></div>
