--- a/catalog.html
+++ b/catalog.html
@@ -326,7 +326,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -362,7 +362,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -398,7 +398,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -434,7 +434,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -470,7 +470,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
@@ -506,7 +506,7 @@
                             <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>габаритные размеры</span>
                                     4785x1930x1620 (мм)
