--- a/index.html
+++ b/index.html
@@ -352,18 +352,17 @@
             <section class="main-features-step-2" style="background-image: url('img/features/feature-2.jpeg');">
                 <div class="container">
                     <div class="main-features-step-2__text">
+                        <div class="main-features__num main-features__num--right">02</div>
+                        <div class="main-features__title">Работа с физ и юр лицами</div>
                         <div class="swiper js-features-step-2">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <div class="main-features__num main-features__num--right">02</div>
-                                    <div class="main-features__title">Работа с физ и юр лицами</div>
+
                                     <div class="main-features__subtitle">Физическое лицо</div>
                                     <div class="main-features__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</div>
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <div class="main-features__num main-features__num--right">02</div>
-                                    <div class="main-features__title">Работа с физ и юр лицами</div>
                                     <div class="main-features__subtitle">Физическое лицо</div>
                                     <div class="main-features__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</div>
                                 </div>
@@ -438,7 +437,7 @@
                                         <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                                     </div>
                                     <div class="teaser-item__detail">
-                                        <div class="teaser-item__detail-row" data-cols="2">
+                                        <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                             <div class="teaser-item__detail-col">
                                                 <span>габаритные размеры</span>
                                                 4785x1930x1620 (мм)
@@ -475,7 +474,7 @@
                                         <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                                     </div>
                                     <div class="teaser-item__detail">
-                                        <div class="teaser-item__detail-row" data-cols="2">
+                                        <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                             <div class="teaser-item__detail-col">
                                                 <span>габаритные размеры</span>
                                                 4785x1930x1620 (мм)
@@ -512,7 +511,7 @@
                                         <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                                     </div>
                                     <div class="teaser-item__detail">
-                                        <div class="teaser-item__detail-row" data-cols="2">
+                                        <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                             <div class="teaser-item__detail-col">
                                                 <span>габаритные размеры</span>
                                                 4785x1930x1620 (мм)
@@ -549,7 +548,7 @@
                                         <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                                     </div>
                                     <div class="teaser-item__detail">
-                                        <div class="teaser-item__detail-row" data-cols="2">
+                                        <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                             <div class="teaser-item__detail-col">
                                                 <span>габаритные размеры</span>
                                                 4785x1930x1620 (мм)
@@ -586,7 +585,7 @@
                                         <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                                     </div>
                                     <div class="teaser-item__detail">
-                                        <div class="teaser-item__detail-row" data-cols="2">
+                                        <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                             <div class="teaser-item__detail-col">
                                                 <span>габаритные размеры</span>
                                                 4785x1930x1620 (мм)
@@ -623,7 +622,7 @@
                                         <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                                     </div>
                                     <div class="teaser-item__detail">
-                                        <div class="teaser-item__detail-row" data-cols="2">
+                                        <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                             <div class="teaser-item__detail-col">
                                                 <span>габаритные размеры</span>
                                                 4785x1930x1620 (мм)
