--- a/news-detail.html
+++ b/news-detail.html
@@ -306,7 +306,7 @@
             </div>
         </section>
 
-        <section class="section-page-header">
+        <section class="section-page-header is-news-page">
             <img src="img/headers/news-detail.jpeg" alt="">
         </section>
 
@@ -331,6 +331,7 @@
                 <div class="other-news ">
                     <div class="other-news__title">Другие новости</div>
                     <div class="other-news__nav">
+                        <a href="news.html">смотреть все новости</a>
                         <div class="js-more-news-nav swiper-button-prev"></div>
                         <div class="js-more-news-nav swiper-button-next"></div>
                     </div>
