--- a/product-page.html
+++ b/product-page.html
@@ -306,7 +306,7 @@
             </div>
         </section>
 
-        <section class="section-page-header">
+        <section class="section-page-header is-news-page">
             <img src="img/headers/dop-page.jpeg" alt="">
         </section>
 
