--- a/text.html
+++ b/text.html
@@ -307,10 +307,10 @@
 
             <section class="section-content">
                 <div class="container">
-                    <h1>
+                    <h1 class="title-1">
                         Заголовок 1
                     </h1>
-                    <div class="simple-title-wrap">
+                    <div class="simple-title-wrap" style="margin-bottom: 60px;">
                         <h1>
                             Заголовок
                             <span>Типа 2</span>
@@ -323,7 +323,7 @@
                     <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу.</p>
 
                     <h3>Список</h3>
-                    <ul>
+                    <ul style="margin-bottom: 60px;">
                         <li>Небольшое словосочетание для списка</li>
                         <li>Небольшое словосочетание для списка</li>
                         <li>Небольшое словосочетание для списка</li>
