--- a/catalog-dop.html
+++ b/catalog-dop.html
@@ -331,7 +331,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -341,7 +341,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
@@ -358,7 +358,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -368,7 +368,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
@@ -385,7 +385,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -395,7 +395,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
@@ -412,7 +412,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -422,7 +422,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
@@ -439,7 +439,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -449,7 +449,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
@@ -466,7 +466,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -476,7 +476,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
@@ -493,7 +493,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -503,7 +503,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
@@ -520,7 +520,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -530,7 +530,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
@@ -547,7 +547,7 @@
                             <div class="teaser-item__info-left">Pandora Slim 20 GB/T</div>
                         </div>
                         <div class="teaser-item__detail">
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходная мощность DC</span>
                                     20 кВ
@@ -557,7 +557,7 @@
                                     не более 60 А
                                 </div>
                             </div>
-                            <div class="teaser-item__detail-row" data-cols="2">
+                            <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                 <div class="teaser-item__detail-col">
                                     <span>выходное напряжение</span>
                                     до 750 В
