--- a/catalog-electro.html
+++ b/catalog-electro.html
@@ -568,7 +568,7 @@
                                 <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                             </div>
                             <div class="teaser-item__detail">
-                                <div class="teaser-item__detail-row" data-cols="2">
+                                <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                     <div class="teaser-item__detail-col">
                                         <span>габаритные размеры</span>
                                         4785x1930x1620 (мм)
@@ -604,7 +604,7 @@
                                 <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                             </div>
                             <div class="teaser-item__detail">
-                                <div class="teaser-item__detail-row" data-cols="2">
+                                <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                     <div class="teaser-item__detail-col">
                                         <span>габаритные размеры</span>
                                         4785x1930x1620 (мм)
@@ -640,7 +640,7 @@
                                 <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                             </div>
                             <div class="teaser-item__detail">
-                                <div class="teaser-item__detail-row" data-cols="2">
+                                <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                     <div class="teaser-item__detail-col">
                                         <span>габаритные размеры</span>
                                         4785x1930x1620 (мм)
@@ -676,7 +676,7 @@
                                 <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                             </div>
                             <div class="teaser-item__detail">
-                                <div class="teaser-item__detail-row" data-cols="2">
+                                <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                     <div class="teaser-item__detail-col">
                                         <span>габаритные размеры</span>
                                         4785x1930x1620 (мм)
@@ -712,7 +712,7 @@
                                 <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                             </div>
                             <div class="teaser-item__detail">
-                                <div class="teaser-item__detail-row" data-cols="2">
+                                <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                     <div class="teaser-item__detail-col">
                                         <span>габаритные размеры</span>
                                         4785x1930x1620 (мм)
@@ -748,7 +748,7 @@
                                 <div class="teaser-item__info-right"><img src="img/brands/nio.png" alt=""></div>
                             </div>
                             <div class="teaser-item__detail">
-                                <div class="teaser-item__detail-row" data-cols="2">
+                                <div class="teaser-item__detail-row is-brand-row" data-cols="2">
                                     <div class="teaser-item__detail-col">
                                         <span>габаритные размеры</span>
                                         4785x1930x1620 (мм)
