--- a/contacts.html
+++ b/contacts.html
@@ -305,13 +305,13 @@
                 </div>
             </section>
 
-            <section>
+            <section class="section-page-header">
                 <img src="img/contact-page/main.jpeg" alt="">
             </section>
 
             <section class="section-content">
                 <div class="container">
-                    <h1>
+                    <h1 class="is-normal-case">
                         Контакты
                     </h1>
 
@@ -342,9 +342,10 @@
                             <a href="#" class="btn btn-black">Заказать звонок</a>
                         </div>
                     </div>
-                    
-                    
-                    <p><img src="img/contact-page/map.png" alt=""></p>
+
+                    <div class="map">
+                        <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/?ll=37.617700%2C55.755863&utm_medium=mapframe&utm_source=maps&z=10" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты — транспорт, навигация, поиск мест</a><iframe src="https://yandex.ru/map-widget/v1/?ll=37.617700%2C55.755863&z=10" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+                    </div>
                 </div>
             </section>
         </main>
